--- a/hero-lol/html/index.html
+++ b/hero-lol/html/index.html
@@ -47,7 +47,13 @@
                     </div>
                 </a>
                 <a href="login.html" target="_top">
-                    <div class="detailItem">
+                    <div class="detailItem login-div">
+                        <img src="../img/geren.png"/>
+                        <span style="color: #7dc5eb;">个人</span>
+                    </div>
+                </a>
+                <a href="personal.html" target="_top">
+                    <div class="detailItem login-success">
                         <img src="../img/geren.png"/>
                         <span style="color: #7dc5eb;">个人</span>
                     </div>
