--- a/hero-lol/html/personal.html
+++ b/hero-lol/html/personal.html
@@ -14,7 +14,7 @@
         <img src="../img/personal/personal-logo.png"/>
     </div>
     <div class="personal-path">
-        <strong>英雄联盟首页</strong> 召唤师资料 <small>嗯丶我踩到你脚了[诺克萨斯 电信]</small>
+        <strong>英雄联盟首页</strong> 召唤师资料 <small><span class="userName">嗯丶我踩到你脚了</span>[诺克萨斯 电信]</small>
     </div>
     <div class="personal-top">
         <div class="GameZone">
@@ -36,7 +36,7 @@
         <div class="head-img">
             <img src="../img/personal/profileicon17.jpg" style="width: 2rem;height: 2rem"/>
         </div>
-        <h3>嗯丶我踩到你脚了</h3>
+        <h3><span class="userName">嗯丶我踩到你脚了</span></h3>
         <div class="content-list">
             <ul>
                 <li class="active">个人信息</li>
@@ -173,7 +173,7 @@
                         <li><img src="../img/personal/hero-head/Zac.png"><p>我爱故事不爱酒</p><p>金钱：18.7K</p></li>
                         <li><img src="../img/personal/hero-head/Velkoz.png"><p>madcor细细</p><p>金钱：16.9K</p></li>
 
-                        <li><img src="../img/personal/hero-head/Vi.png"><p>Qoopp丶勾践</p><p>金钱：18.7K</p></li>
+                        <li><img src="../img/personal/hero-head/Urgot.png"><p>Qoopp丶勾践</p><p>金钱：18.7K</p></li>
                         <li><img src="../img/personal/hero-head/Viktor.png"><p>重口味的小欧尼y</p><p>金钱：14.4K</p></li>
                     </ul>
                 </div>
@@ -305,5 +305,7 @@
     <script src="../js/jquery.js"></script>
     <script src="../js/jquery.mobile-1.4.5.min.js"></script>
     <script src="../js/personal.js"></script>
+    <script src="../js/login_register.js"></script>
+
 </body>
 </html>
