--- a/hero-lol/html/personal.html
+++ b/hero-lol/html/personal.html
@@ -306,6 +306,28 @@
     <script src="../js/jquery.mobile-1.4.5.min.js"></script>
     <script src="../js/personal.js"></script>
     <script src="../js/login_register.js"></script>
+<script>
+    $(document).ready(function () {
 
+        function GetRequest() {
+            var url = location.search; //获取url中"?"符后的字串
+            var theRequest = new Object();
+            if (url.indexOf("?") != -1) {
+                var str = url.substr(1);
+                strs = str.split("&");
+                for (var i = 0; i < strs.length; i++) {
+                    theRequest[strs[i].split("=")[0]] = unescape(strs[i].split("=")[1]);
+                }
+            }
+            return theRequest;
+        }
+        var text = GetRequest();
+        console.log(text);
+        if (text.userName) {
+            $('.userName').text(text.userName);
+            console.log(text.userName);
+        }
+    });
+</script>
 </body>
 </html>
