--- a/hero-lol/html/index.html
+++ b/hero-lol/html/index.html
@@ -12,7 +12,7 @@
 <div data-role="page" id="pageone">
     <div data-role="header">
         <div class="nav">
-            <a href="index.html"><div class="logo"></div></a>
+            <a href="login.html" target="_top"><div class="logo"></div></a>
             <div class="search">
                 <input type="text" name="search" placeholder="搜索你喜欢的">
                 <img src="../img/search.png"/>
